fixing pie chart on mobile too wide

--- a/angular/src/app/graphs-2024/graphs-2024.component.css
+++ b/angular/src/app/graphs-2024/graphs-2024.component.css
@@ -1,14 +1,20 @@
 #heat-map,
-        #scatter-plot,
-        #pixels-per-minute {
-            width: 95%;
-            display: block;
-            margin: 10px auto;
-        }
-        #pie-chart {
-            display: block;
-            margin: 10px auto;
-        }
-        h3 {
-            text-align: center;
-        }
+#scatter-plot,
+#pixels-per-minute {
+    width: 95%;
+    display: block;
+     margin: 10px auto;
+}
+#pie-chart {
+    display: block;
+    margin: 10px auto;
+}
+h3 {
+    text-align: center;
+}
+
+@media only screen and (max-width: 550px) {
+    #pie-chart {
+        width: 95%;
+    }
+}
